--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/netlify": "^5.1.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@iconify-json/heroicons-outline": "^1.1.10",
     "astro": "^4.5.1",
+    "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
